# graft

./: .gitignore  CMakeLists.txt  main.cpp  old_main.cpp  settings.json
src/domain/: Album.h  AlbumNumberedTrack.h  Artist.h  Disc.h  DiscNumberedTrack.h  DomainGraph.h  Track.h  domain-fwd.h
src/graft/: cached_presenter.h  erased.h  erased_mono_cached_presenter.h  graft.h  graph.h  graph_view.h  many.h  member.h  member_buffer.h  metaclass.h  object.h  old_presenter.h  one.h  patch.h  presenter.h  reachable_acyclic.h  reachable_acyclic_old.h  reachable_metaclasses.h
src/graft/associator/: many.h  some_associator.h
src/graft/void/: void_object.h
src/util/: meta.hpp  static-string.hpp
tests/: erased-test.cpp  graft-test-main.cpp  graph-test.cpp  graph_view-test.cpp  object-test.cpp  patch-test.cpp  reachable_acyclic-test.cpp  test-util.h
